# strata

./: .gitignore  BASELINE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/:    app.rs  cli.rs  constants.rs  domain.rs  main.rs  main.rs.save  storage.rs  themes.rs
src/app/: category_modal_view.rs  category_state.rs  event_handlers.rs  modal_views.rs  render_views.rs  report_modal_view.rs  report_state.rs  time_format.rs  ui_helpers.rs  view_style.rs
src/sand/: engine.rs  mod.rs  resize.rs
