[package]
name = "strata"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
thiserror = "1.0"
itertools = "0.12"

[features]
default = ["cli"]
cli = []
tui = []

[profile.release]
strip = true
lto = true
codegen-units = 1
